# GPush

./: LICENSE  README.md  build.sh
android_client_demo/: .project  AndroidManifest.xml
android_client_demo/jni/: Android.mk  Application.mk  androidclient.cpp  androidclient.h  client_jni.cpp  client_jni.h
android_client_demo/res/values/: strings.xml
android_client_demo/src/com/gim/: GMsg.java  client.java  listener.java
android_client_demo/src/com/gim/msg/: GClientBox.java  GMsgBroadcaseter.java  GMsgBroadcastReceiver.java  GMsgPublisher.java  GMsgRouter.java  Observer.java
android_client_demo/src/com/gpush/activity/: MainActivity.java
android_client_demo/src/com/gpush/application/: GPushApplication.java
android_client_demo/src/com/gpush/config/: Config.java
android_gpush_demo/gpush/: libs.rar
android_gpush_demo/gpush/.externalToolBuilders/: ndk-builder.launch
android_gpush_demo/gpush/jni/: Android.mk
android_gpush_demo/gpush/jni/android/: androidclient.cpp  androidclient.h  client_jni.h
android_gpush_demo/gpush/jni/base/: ef_utility.cpp
android_gpush_demo/gpush/jni/client_sdk/: client.cpp  client.h  client_conn.cpp  client_conn.h  client_log.cpp  client_log.h  ef_loop_buf.cpp  ef_loop_buf.h  eventloop.h  opbase.cpp  ops.cpp  ops.h
android_gpush_demo/gpush/jni/net/: ef_sock.h
android_gpush_demo/gpush/jni/proto/: gpush.proto  message.pb.h  pair.proto  session.proto
android_gpush_demo/gpush/src/com/gim/: GMsg.java
android_gpush_demo/gpush/src/com/gim/msg/: GMsgPublisher.java
android_gpush_demo/gpush/src/com/gpush/application/: GPushApplication.java
clientsdk/: CMakeLists.txt  build.sh
clientsdk/client/: client.cpp  client_conn.cpp  client_conn.h  client_log.cpp  ef_loop_buf.cpp  ef_loop_buf.h  eventloop.cpp  eventloop.h  msg_head.h  opbase.cpp  opbase.h  ops.cpp  ops.h
clientsdk/efnfw/base/: ef_auto_ptr.h  ef_base64.cpp  ef_base64.h  ef_btype.h  ef_hex.cpp  ef_hex.h  ef_loop_buf.h  ef_md5.cpp  ef_md5.h  ef_no_copy.h  ef_singleton.h  ef_thread.cpp  ef_thread.h  ef_utility.cpp  ef_utility.h
clientsdk/efnfw/net/: ef_sock.cpp  ef_sock.h
clientsdk/google/protobuf/stubs/: platform_macros.h
clientsdk/include/: client.h  client_def.h  client_log.h  config.h  err_no.h
clientsdk/proto/: gpush.pb.cpp  gpush.pb.h  gpush.proto  message.pb.cpp  message.pb.h  message.proto  pair.pb.cpp  pair.pb.h  pair.proto  session.pb.cpp  session.pb.h  session.proto
clientsdk/test/: CMakeLists.txt  build.sh
clientsdk/test/src/: test.cpp
common/: CMakeLists.txt  build.sh
common/include/: data_watcher.h  list_watcher.h  redis_client.h  redis_group.h  server_status.h  sess_cache.h  token_check.h  zk_watcher.h
common/src/: redis_client.cpp  redis_group.cpp  server_status.cpp  sess_cache.cpp  token_check.cpp  token_check_impl.cpp  token_check_impl.h  zk_client.cpp
connect_server/: CMakeLists.txt  build.sh
connect_server/etc/: elog.conf  settings.conf
connect_server/src/: client_conn.cpp  client_conn.h  common.cpp  connect_server.cpp  connect_server.h  main.cpp  server_config.cpp  server_config.h  type_map.cpp  type_map.h
connect_server/test_client/: CMakeLists.txt  build.sh
connect_server/test_client/src/: test.cpp
efnfw/: CMakeLists.txt
efnfw/net/: ef_event_loop.cpp
head/: msg_head.h
proto/: gpush.proto  json_push.proto
push_server/: CMakeLists.txt  build.sh
push_server/etc/: elog.conf  settings.conf
push_server/src/: listen_conn.cpp  listen_conn.h  logic_common.cpp  logic_common.h  logic_interface.h  logic_log.cpp  logic_log.h  logic_server.cpp  logic_statis.h  main.cpp  main_config.cpp  main_config.h  pack_logger.h  push_server.h  server_conn.cpp  server_conn.h  server_manager.cpp  server_manager.h
push_server/test_client/: CMakeLists.txt  build.sh
push_server/test_client/src/: main.cpp
