cmake_minimum_required(VERSION 2.6)
project(push_server)
set(CMAKE_VERBOSE_MAKEFILE ON)
add_definitions("-Wall -pg -g")
include_directories(include ../common/include ../efnfw ../head)
link_directories(/usr/local/lib) 
link_libraries(common efnfw zookeeper_mt hiredis protobuf pthread)
AUX_SOURCE_DIRECTORY(src SRC_LIST)
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
file(GLOB_RECURSE SRC_LIST src/*.cpp)
add_executable(bin/PushServer ${SRC_LIST})
