project(TestClient)
set(CMAKE_VERBOSE_MAKEFILE ON)
add_definitions("-Wall -pg -g")
include_directories(${PROJECT_SOURCE_DIR}/../../common/include ${PROJECT_SOURCE_DIR}/../../efnfw ${PROJECT_SOURCE_DIR}/../../head ${PROJECT_SOURCE_DIR}/src)
link_directories(/usr/local/lib /home/lib)
link_libraries(common efnfw zookeeper_mt hiredis protobuf jsoncpp dl pthread)
file(GLOB_RECURSE SRC_LIST src/*.cpp)
add_executable(bin/TestClient ${SRC_LIST})
